Update portfolio.html GIF Link

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -114,6 +114,7 @@
     <div class="project">
       <h3>GIF English App</h3>
       <p>Immersive English-learning app with flashcards, dialogues, quizzes, and more – built with Gun.js and Vercel.</p>
+      <a href="https://3dvr-gif-lesson-1.vercel.app/" target="_blank">Visit GIF English App</a>
     </div>
 
     <div class="project">
