Update portfolio.html add tommyos link

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -120,6 +120,7 @@
     <div class="project">
       <h3>TommyOS</h3>
       <p>A modular, open-source web OS that blends browser and desktop functionality. In progress with React and Gun.js.</p>
+      <a href="https://tommyos.vercel.app">Visit TommyOS</a>
     </div>
 
     <!-- Add more projects here -->
