--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -123,6 +123,18 @@
       <a href="https://tommyos.vercel.app" target="_blank">Visit TommyOS →</a>
     </div>
 
+    <div class="project">
+      <h3>Tmsteph Website</h3>
+      <p>this is the personal website for 3dvr.tech founder, Thomas Stephens</p>
+      <a href="https://tmsteph.com" target="_blank">Visit tmsteph.com →</a>
+    </div>
+
+    <div class="project">
+      <h3>thomas.3dvr.tech</h3>
+      <p>This is a portfolio site for Thomas made by David Martinez Rey</p>
+      <a href="https://thomas.3dvr.tech" target="_blank">Visit thomas.3dvr.tech →</a>
+    </div>
+
     <!-- Add more projects here -->
   </section>
 
