--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark light" />
   <title>Subscribe | 3dvr.tech</title>
-  <link rel="icon" href="3DVRfavicon.png" />
+  <link rel="icon" href="../3DVRfavicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
   <style>
     :root {
@@ -60,7 +60,7 @@
 </head>
 <body>
   <header>
-    <a href="index.html"><img src="3DVR.png" alt="3dvr.tech logo" /></a>
+    <a href="index.html"><img src="../3DVR.png" alt="3dvr.tech logo" /></a>
     <nav>
       <a href="index.html">Home</a>
       <a href="#plans">Plans</a>
