--- a/index.html
+++ b/index.html
@@ -245,6 +245,26 @@
     </p>
   </section>
 
+  <!-- SOCIAL LINKS SECTION -->
+  <section id="social" style="background: #1a1a1a; padding: 3rem 1rem; text-align: center;">
+    <h2 style="color: var(--accent); margin-bottom: 1rem;">Follow Us</h2>
+    <p style="color: #ccc; margin-bottom: 2rem;">Connect with us on social media.</p>
+    <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
+      <a href="https://www.facebook.com/3dvr.facebook/" target="_blank" aria-label="Facebook"
+         style="color: var(--accent); font-size: 2rem; transition: transform 0.2s;">
+        <i class="fab fa-facebook-square"></i>
+      </a>
+      <a href="https://www.linkedin.com/company/3dvrtech" target="_blank" aria-label="LinkedIn"
+         style="color: var(--accent); font-size: 2rem; transition: transform 0.2s;">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://www.instagram.com/3dvr.tech/" target="_blank" aria-label="Instagram"
+         style="color: var(--accent); font-size: 2rem; transition: transform 0.2s;">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+  </section>
+  
   <footer style="background: #111; color: #aaa; text-align: center; padding: 2rem 1rem; font-size: 0.95rem;">
     <p>&copy; 2025 <a href="https://3dvr.tech" target="_blank" style="color: var(--accent);">3dvr.tech</a> — Open Source. Open Future.</p>
     <p><a href="https://github.com/tmsteph/3dvr-web" target="_blank" style="color: var(--accent); text-decoration: none;">✏️ Edit this page on GitHub</a></p>
