--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <p>Visionary technologist creating the tools of tomorrow.</p>
       </div>
       <div class="card team-card" data-link="https://bodhi-lowski.vercel.app/">
-        <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <img src="media/Bodhi_Lowski.jpg" alt="Bodhi Lowski" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>Bodhi Lowski</h3>
         <p><strong>Chief Marketing Officer</strong></p>
         <p>Building the brand through grassroots storytelling and growth.</p>
