--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <p>Linux Expert and Chief Financial Officer.</p>
       </div>
       <div class="card team-card" data-link="https://brandon-adolfo.vercel.app/">
-        <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <img src="media/Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>Brandon Adolfo</h3>
         <p><strong>Junior Developer</strong></p>
         <p>Cross-platform mobile builder with an eye for design.</p>
